# grainengine

./: .clangd  .gitignore  CMakeLists.txt  compile_flags.json  compile_flags.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/camera/: camera.hpp
src/shaders/: fragment.shader  shader.hpp  vertex.shader
src/window/: window.cpp  window.hpp
